add clear button and make editable to false after fetch